# lingvista

./: .editorconfig  .env.example  .gitignore  .gitlab-ci.yml  README.md  mkdocs.yml  patterns.txt  pyproject.toml  requirements.txt
docker/: Dockerfile
docs/: database.md  forms.md  index.md  models.md  settings.md  urls.md  views.md  widgets.md
lingvista/: db.sqlite3  manage.py
lingvista/lingvista/: asgi.py  settings.py  urls.py  wsgi.py
lingvista/lingvista_web/: admin.py  apps.py  check_answer.py  forms.py  models.py  tests.py  views.py  widgets.py
lingvista/lingvista_web/migrations/: 0001_initial.py  0002_alter_profile_language_level.py  0002_remove_profile_bio_remove_profile_location_and_more.py  0003_audio_alter_task_lesson_task_audio.py
lingvista/lingvista_web/static/css/: account_page.css  accountedit_page.css  authorization.css  base.css  footer.css  langlevel_page.css  lessons_page.css  login.css  login_sigin_page.css  login_signin_page.css  main_page.css  navbar.css  (+4 more)
scripts/: install.bat  migrate.bat  run.bat
scripts/linux/: activate.sh  check.sh  coverage.sh  create_docs.sh  create_virtual_environment.sh  install-third-party.sh  install.sh  migrate.sh  pycodestyle.sh  pylint.sh  run.sh  setup.sh  tests.sh
scripts/windows/: check.bat  coverage.bat  create_docs.bat  install-third-party.bat  migrate.bat  pycodestyle.bat  pylint.bat  run.bat  setup.bat  tests.bat
scripts/windows/ps/: activate.ps1  check.ps1  coverage.ps1  create_docs.ps1  create_virtual_environment.ps1  install.ps1  migrate.ps1  pycodestyle.ps1  pylint.ps1  run.ps1  tests.ps1
(+29 files in other folders)
